chore:  Add function to 'teleport' the player character in the initial         position when a collision with an enemy occurs
        - convert .wav files to .ogg
        - improvements for functions to check collision

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
 body {
     text-align: center;
+    background-color: rgb(128, 128, 128);
+}
+canvas{
+    background-color: rgb(66, 66, 66);
+    padding:10px;
 }
