--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,15 @@ body {
     text-align: center;
     margin: auto;
     width: 1130px;
+    font-family: 'Roboto', sans-serif;
 }
 
 #container {
     width: 100%;
     display: inline-block;
-    background-image: url("../images/frame.png");
     margin-top: 10px;
-    box-shadow: 15px 15px 20px rgba(61, 49, 43, 0.815);
+    box-shadow: 10px 10px 10px #3d312b80;
+    border: 2px solid #999;
 }
 
 canvas {
@@ -18,7 +19,7 @@ canvas {
     margin-top: 16px;
     margin-bottom: 90px;
     box-sizing: curent-box;
-    box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.746);
+    box-shadow: 3px 3px 5px #ffffffbe;
 }
 
 .title {
@@ -27,8 +28,8 @@ canvas {
     font-family: "Fredericka the Great", cursive;
     font-size: 36px;
     margin-top: 35px;
-    color: rgb(104, 47, 0);
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.65)
+    color: #682f00;
+    text-shadow: 0 0 5px #000000a6
 }
 
 #score-panel {
@@ -37,8 +38,8 @@ canvas {
     height: 539px;
     margin-top: 30px;
     text-align: left;
-    color: rgba(49, 28, 0, 0.466);
-    text-shadow: 1px 1px 5px rgba(29, 29, 29, 0.603);
+    color: #331c0077;
+    text-shadow: 1px 1px 5px #1d1d1d9a;
     display: inline-block;
 }
 
@@ -90,7 +91,7 @@ img {
 footer {
     margin: auto;
     margin-top: 40px;
-    color: rgba(112, 112, 112, 0.527);
+    color: #70707086;
     width: 100%;
     height: 30px;
     text-align: center;
